--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -17,7 +17,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x64, x86, arm, arm64]
+        #arch: [x64, x86, arm, arm64]
+        arch: [x64, x86]
         os: [macos-latest, windows-latest, ubuntu-latest]
         configuration: [Debug, Release]
         include:
@@ -25,10 +26,10 @@ jobs:
             conan-arch: x86_64
           - arch: x86
             conan-arch: x86
-          - arch: arm
-            conan-arch: armv4
-          - arch: arm64
-            conan-arch: armv7
+          #- arch: arm
+          #  conan-arch: armv4
+          #- arch: arm64
+          #  conan-arch: armv7
           - os: macos-latest
             short-os: osx
           - os: windows-latest
@@ -42,18 +43,18 @@ jobs:
             arch: x64
             cmake-win-flag: ' -A x64'
         exclude:
-          - os: windows-latest
-            arch: arm
-          - os: windows-latest
-            arch: arm64
+          #- os: windows-latest
+          #  arch: arm
+          #- os: windows-latest
+          #  arch: arm64
           - os: ubuntu-latest
             arch: x86
           - os: macos-latest
             arch: x86
-          - os: macos-latest
-            arch: arm
-          - os: macos-latest
-            arch: arm64
+          #- os: macos-latest
+          #  arch: arm
+          #- os: macos-latest
+          #  arch: arm64
 
     runs-on: ${{ matrix.os }}
 
