--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -1,10 +1,10 @@
-name: CMake Build and Deploy
+name: CMake CI/CD
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "dev" ]
 
 env:
   CONAN_USER_HOME: "${{ github.workspace }}/conan/"
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build:
-    # Processor Architectures
+    # Arch Matrix
     strategy:
       fail-fast: false
       matrix:
@@ -56,58 +56,28 @@ jobs:
           #- os: macos-latest
           #  arch: arm64
 
-    runs-on: ${{ matrix.os }}
-
+    uses: ./.github/workflows/BuildCMakeReusable.yml
+    with:
+      arch: ${{ matrix.arch }}
+      conan-arch: ${{ matrix.conan-arch }}
+      os: ${{ matrix.os }}
+      short-os: ${{ matrix.short-os }}
+      cmake-win-flag: ${{ matrix.cmake-win-flag }}
+      configuration: ${{ matrix.configuration }}
+      create-nuget-package: ${{ matrix.configuration == 'Release' }}
+  deploy:
+    if: ${{ github.event_name == 'push'  && startsWith(github.ref, 'refs/tags/v')}}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
       - uses: nuget/setup-nuget@v1
         with:
           nuget-version: 'latest'
-      - name: Install Conan
-        id: conan
-        uses: turtlebrowser/get-conan@main
-      - name: Install Curl
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: sudo apt install -y libcurl4-openssl-dev
-      - name: Conan Cache
-        if: ${{ matrix.os != 'windows-latest' }}
-        id: cache-conan
-        uses: actions/cache@v3
+      - name: Download NuGet Packages
+        uses: actions/download-artifact@v3
         with:
-          path: ${{ github.workspace }}/conan
-          key: ${{ runner.os }}-conan-cache
-      - name: Export ecCodes
-        run: conan export eccodes
-      - name: Export Conan Package
-        run: conan export .
-      - name: Install Conan Packages
-        run: conan install . -if ${{github.workspace}}/build -s arch=${{ matrix.conan-arch }} -s build_type=${{ matrix.configuration }} --build=missing
-      - name: Configure CMake
-        run: cmake -S . -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.configuration }} -DNUGET_ARCH=${{ matrix.short-os }}-${{ matrix.arch }}${{ matrix.cmake-win-flag }}
-      - name: Build
-        run: cmake --build ${{github.workspace}}/build --target aviationcalc --config ${{ matrix.configuration }}
-      - name: Create NuGet Package
-        if: ${{ matrix.configuration == 'Release' }}
+          path: artifacts
+      - name: Push NuGet Packages
         run: |
-          cd ${{ github.workspace }}/out/nuget/${{ matrix.short-os }}-${{ matrix.arch }}
-          nuget pack .
-      - name: Archive Binary Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: AviationCalcUtil-bin-${{ matrix.short-os }}-${{ matrix.arch }}-${{ matrix.configuration }}
-          path: |
-            ${{ github.workspace }}/build/*/*.dll
-            ${{ github.workspace }}/build/*/*.pdb
-            ${{ github.workspace }}/build/*/*.so*
-            ${{ github.workspace }}/build/*/*.dylib*
-      - name: Archive NuGet Packages
-        if: ${{ matrix.configuration == 'Release' }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: AviationCalcUtil-NuGet-${{ matrix.short-os }}-${{ matrix.arch }}
-          path: |
-            ${{ github.workspace }}/**/*.nupkg
-            ${{ github.workspace }}/**/*.snupkg
+          nuget push artifacts\**\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
+          nuget push artifacts\**\*.snupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
