--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -66,7 +66,7 @@ jobs:
       configuration: ${{ matrix.configuration }}
       create-nuget-package: ${{ matrix.configuration == 'Release' }}
   deploy:
-    if: ${{ github.event_name == 'push'  && startsWith(github.ref, 'refs/tags/v')}}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/master')}}
     runs-on: ubuntu-latest
     needs: build
     steps:
