--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -7,8 +7,7 @@ on:
     branches: [ "master" ]
 
 env:
-  CONAN_USER_HOME: "${{ github.workspace }}/conan/"
-  CONAN_USER_HOME_SHORT: "${{ github.workspace }}/conan/short"
+  CONAN_HOME: "${{ github.workspace }}/conan/"
   CONAN_VERBOSE_TRACEBACK: 1
 
 jobs:
