--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -86,3 +86,19 @@ jobs:
         run: |
           cd ${{ github.workspace }}/nuget
           nuget push *.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
+  create-github-release:
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')}}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download Binary Tars
+        uses: actions/download-artifact@v3
+        with:
+          name: AviationCalcUtil-bins
+          path: ${{ github.workspace }}/bins
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            ${{ github.workspace}}/bins/*.tar.gz
