--- a/.github/workflows/BuildCMakeReusable.yml
+++ b/.github/workflows/BuildCMakeReusable.yml
@@ -75,7 +75,7 @@ jobs:
           path: ${{ github.workspace }}/conan
           key: ${{ inputs.short-os }}-${{ inputs.arch }}-conan2-cache
       - name: Build Default Conan Profile
-        run: conan profile detect
+        run: conan profile detect --force
       - name: Export ecCodes
         run: conan export eccodes
       - name: Export Conan Package
@@ -86,20 +86,28 @@ jobs:
         run: cmake -S . -B ${{github.workspace}}/build -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/build/conan_toolchain.cmake -DCMAKE_BUILD_TYPE=${{ inputs.configuration }} -DCREATE_NUGET_PACKAGE=${{ inputs.create-nuget-package && 1 || 0 }} -DCOPY_NUGET_DEFS=${{ inputs.copy-nuget-defs && 1 || 0 }} -DNUGET_ARCH=${{ inputs.short-os }}-${{ inputs.arch }}${{ inputs.cmake-win-flag }}
       - name: Build
         run: cmake --build ${{github.workspace}}/build --target aviationcalc --config ${{ inputs.configuration }}
-#      - name: Create NuGet Package
-#        if: ${{ inputs.create-nuget-package }}
-#        run: |
-#          cd ${{ github.workspace }}/out/nuget/${{ inputs.short-os }}-${{ inputs.arch }}
-#          nuget pack .
+      - name: Create NuGet Package
+        if: ${{ inputs.create-nuget-package }}
+        run: |
+          cd ${{ github.workspace }}/out/nuget/${{ inputs.short-os }}-${{ inputs.arch }}
+          nuget pack .
       - name: Archive Binary Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: AviationCalcUtil-bin-${{ inputs.short-os }}-${{ inputs.arch }}-${{ inputs.configuration }}
           path: |
-            ${{ github.workspace }}/build/*/*.dll
-            ${{ github.workspace }}/build/*/*.pdb
-            ${{ github.workspace }}/build/*/*.so*
-            ${{ github.workspace }}/build/*/*.dylib*
+            ${{ github.workspace }}/build/**/*.dll
+            ${{ github.workspace }}/build/**/*.pdb
+            ${{ github.workspace }}/build/**/*.so*
+            ${{ github.workspace }}/build/**/*.dylib*
+      - name: Tar Binaries
+        if: ${{ inputs.create-nuget-package }}
+        run: tar -czvf ${{ github.workspace}}/out/AviationCalcUtil-bin-${{ inputs.short-os }}-${{ inputs.arch }}.tar.gz ${{ github.workspace }}/out/nuget/runtimes/${{ inputs.short-os }}-${{ inputs.arch }}/*.*
+      - name: Archive Tar Binaries
+        uses: actions/upload-artifact@v3
+        with:
+          name: AviationCalcUtil-bins
+          path: ${{ github.workspace }}/out/AviationCaclUtil-bin-${{ inputs.short-os }}-${{ inputs.arch }}.tar.gz
       - name: Archive NuGet Files
         if: ${{ inputs.create-nuget-package }}
         uses: actions/upload-artifact@v3
