--- a/packages/nuget/template.nuspec
+++ b/packages/nuget/template.nuspec
@@ -7,6 +7,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <readme>README.md</readme>
     <license type="file">LICENSE.txt</license>
+    <repository type="git">https://github.com/997R8V10/aviation-calc-util#readme</repository>
     <!--
     <projectUrl>${CMAKE_PROJECT_HOMEPAGE_URL}</projectUrl>
     <iconUrl></iconUrl>
