--- a/.github/workflows/BuildCMakeReusable.yml
+++ b/.github/workflows/BuildCMakeReusable.yml
@@ -67,13 +67,13 @@ jobs:
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
           cmake-version: '3.21.x'
-      - name: Conan Cache
-        if: ${{ inputs.os != 'windows-latest' }}
-        id: cache-conan
-        uses: actions/cache@v3
-        with:
-          path: ${{ github.workspace }}/conan
-          key: ${{ inputs.short-os }}-${{ inputs.arch }}-conan2-cache
+#      - name: Conan Cache
+#        if: ${{ inputs.os != 'windows-latest' }}
+#        id: cache-conan
+#        uses: actions/cache@v3
+#        with:
+#          path: ${{ github.workspace }}/conan
+#          key: ${{ inputs.short-os }}-${{ inputs.arch }}-conan2-cache
       - name: Build Default Conan Profile
         run: conan profile detect --force
       - name: Export ecCodes
@@ -104,6 +104,7 @@ jobs:
         if: ${{ inputs.create-nuget-package }}
         run: tar -czvf ${{ github.workspace}}/out/AviationCalcUtil-bin-${{ inputs.short-os }}-${{ inputs.arch }}.tar.gz ${{ github.workspace }}/out/nuget/runtimes/${{ inputs.short-os }}-${{ inputs.arch }}/*.*
       - name: Archive Tar Binaries
+        if: ${{ inputs.create-nuget-package }}
         uses: actions/upload-artifact@v3
         with:
           name: AviationCalcUtil-bins
