--- a/.github/workflows/AviationCalcUtil.yml
+++ b/.github/workflows/AviationCalcUtil.yml
@@ -3,6 +3,7 @@ name: CMake CI/CD and NuGet Deploy
 on:
   push:
     branches: [ "master" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "master" ]
 
@@ -66,7 +67,7 @@ jobs:
       create-nuget-package: ${{ matrix.configuration == 'Release' }}
       copy-nuget-defs: ${{ matrix.short-os == 'win' && matrix.arch == 'x64' }}
   upload-nuget-package:
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/master')}}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')}}
     runs-on: ubuntu-latest
     needs: build
     steps:
