--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 project(aviation-calc-util
-        VERSION 1.0.19
+        VERSION 1.0.20
         DESCRIPTION "A library to assist with aviation related calculations."
+        HOMEPAGE_URL "https://github.com/997R8V10/aviation-calc-util"
         LANGUAGES CXX
         )
 
