--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,9 +2,9 @@ name: Dev Build
 
 on:
   push:
-    branches: [ "release/*", "dev" ]
+    branches: [ "release/*", "dev", "master" ]
   pull_request:
-    branches: [ "release/*", "dev" ]
+    branches: [ "release/*", "dev", "master" ]
 
 env:
   CONAN_HOME: "${{ github.workspace }}/conan/"
