--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         #arch: [x64, x86, arm, arm64]
-        arch: [x64, x86]
+        arch: [x64, x86, arm64]
         os: [macos-latest, windows-latest, ubuntu-latest]
         configuration: [Debug, Release]
         include:
@@ -25,8 +25,8 @@ jobs:
             conan-arch: x86
           #- arch: arm
           #  conan-arch: armv4
-          #- arch: arm64
-          #  conan-arch: armv7
+          - arch: arm64
+            conan-arch: armv8
           - os: macos-latest
             short-os: osx
           - os: windows-latest
@@ -42,10 +42,12 @@ jobs:
         exclude:
           #- os: windows-latest
           #  arch: arm
-          #- os: windows-latest
-          #  arch: arm64
+          - os: windows-latest
+            arch: arm64
           - os: ubuntu-latest
             arch: x86
+          - os: ubuntu-latest
+            arch: arm64
           - os: macos-latest
             arch: x86
           #- os: macos-latest
