--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,23 @@ out/
 build/
 cmake-build-*/
 CMakeUserPresets.json
+
+# Added by cargo
+
+/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+/Cargo.lock
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+#/Cargo.lock
