--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "aviation_calc_util"
 version = "2.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A library to assist with aviation related calculations."
+readme = "README.md"
+repository = "https://github.com/997R8V10/aviation-calc-util"
+license-file = "LICENSE"
+keywords = ["aviation", "calculations"]
+categories = ["aerospace::simulation", "mathematics", "science::geo"]
 
 [dependencies]
