--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ keywords = ["aviation", "calculations"]
 categories = ["aerospace::simulation", "mathematics", "science::geo"]
 
 [dependencies]
+time = "0.3.30"
