--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "aviation_calc_util"
 version = "2.0.0"
 edition = "2021"
 description = "A library to assist with aviation related calculations."
+homepage = "https://github.com/997R8V10/aviation-calc-util"
+authors = ["Prithvi Shivaraman"]
 readme = "README.md"
 repository = "https://github.com/997R8V10/aviation-calc-util"
 license = "Apache-2.0 OR MIT"
